--- a/src/index.html
+++ b/src/index.html
@@ -306,6 +306,12 @@
       </section>
 
       <section class="hearing">
+         <!-- <img id="bgi" class="bgi" src="../img/form-bg.jpg" alt="Akita Inu Dog"> -->
+         <!-- <picture class="bgi">
+            <source srcset="../img/form-bg.jpg" media="(max-width: 600px)">
+            <img src="../img/form-bg-600.jpg" alt="Akita Inu Dog">
+         </picture> -->
+
          <div class="container">
             <div class="heading tac">
                <div class="heading__wrap ttu">C</div>
