add kate`s fix and og-tag

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
          </div>
       </section>
 
-      <section class="articles flex">
+      <section id="articles" class="articles flex">
          <article class="akita flex">
             <div class="akita__article">
                <div class="akita__date">
@@ -176,6 +176,7 @@
                      mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed odio dui.</div>
                </div>
             </div>
+            <div class="swiper-pagination"></div>
          </div>
          <div class="swiper-button-prev"></div>
          <div class="swiper-button-next"></div>
@@ -244,7 +245,7 @@
          </div>
       </section>
 
-      <section class="team">
+      <section id="team" class="team">
          <div class="container">
             <div class="heading tac">
                <div class="heading__wrap ttu">T</div>
@@ -300,12 +301,14 @@
                   </div>
                </div>
             </div>
+            <div class="swiper-pagination"></div>
          </div>
+
          <div class="swiper-button-prev"></div>
          <div class="swiper-button-next"></div>
       </section>
 
-      <section class="hearing">
+      <section id="contact" class="hearing">
          <!-- <img id="bgi" class="bgi" src="../img/form-bg.jpg" alt="Akita Inu Dog"> -->
          <!-- <picture class="bgi">
             <source srcset="../img/form-bg.jpg" media="(max-width: 600px)">
@@ -327,7 +330,7 @@
                <div class="hearing__message">
                   <textarea placeholder="Message" name="" id="" cols="30" rows="10"></textarea>
                </div>
-               <input class="submit" value="Submit" type="submit">
+               <input id="submit" class="submit" value="Submit" type="submit">
             </form>
          </div>
       </section>
